fixed review note post to db and added review note listing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,13 @@ body{
     width: 100vw;
     overflow-x: hidden;
 }
+
+.reviews-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+}
+.reviews-list ul {
+    list-style-type: none;
+}
